--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,16 @@
     padding: 0;
 }
 
+.meals-loading {
+    text-align: center;
+    color: whitesmoke;
+}
+
+.meals-error {
+    text-align: center;
+    color: crimson;
+}
+
 @keyframes meals-appear {
     from {
         opacity: 0;
